[gd_scene load_steps=7 format=3 uid="uid://bvxq8n2y3qr7c"]

[ext_resource type="Script" uid="uid://c3l817nt0dv02" path="res://algorithms/proceduralgeneration/metaballgenerator/metaballscene.gd" id="1_main"]
[ext_resource type="Script" uid="uid://b6m62uve4s5ol" path="res://algorithms/proceduralgeneration/metaballgenerator/metaballgenerator.gd" id="2_generator"]

[sub_resource type="Theme" id="Theme_ui"]
default_font_size = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.2, 0.2, 0.2, 0.85)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.3, 0.3, 0.3, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.1, 0.15, 1)
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.9, 1, 1)
ambient_light_energy = 0.3
reflected_light_source = 2
tonemap_mode = 2
glow_enabled = true
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_intensity = 0.3
glow_strength = 0.8
glow_bloom = 0.1
adjustment_enabled = true
adjustment_contrast = 1.1
adjustment_saturation = 1.2

[node name="MetaballWorld" type="Node3D"]
script = ExtResource("1_main")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 10, 20, 10)
light_energy = 0.8
light_indirect_energy = 0.5
light_volumetric_fog_energy = 0.3
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 1.2
shadow_blur = 2.0

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.707107, -0.5, -0.5, 0, 0.707107, -0.707107, 0.707107, -0.5, -0.5, -10, 15, -10)
light_color = Color(0.8, 0.9, 1, 1)
light_energy = 0.4

[node name="MetaballGenerator" type="Node3D" parent="."]
script = ExtResource("2_generator")
grid_size = Vector3i(80, 40, 80)
cell_size = 0.4
iso_level = 1.2
metaball_count = 12

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = SubResource("Theme_ui")

[node name="ControlPanel" type="Panel" parent="UI/Control"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control/ControlPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Metaball Explorer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="RegenerateButton" type="Button" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "ðŸ”„ Regenerate Structure"

[node name="HSeparator2" type="HSeparator" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="MetaballCountLabel" type="Label" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Metaball Count: 12"

[node name="MetaballCountSlider" type="HSlider" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
min_value = 5.0
max_value = 25.0
value = 12.0
tick_count = 5
ticks_on_borders = true

[node name="HSeparator3" type="HSeparator" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="IsoLevelLabel" type="Label" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "ISO Level: 1.20"

[node name="IsoLevelSlider" type="HSlider" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.2
tick_count = 6
ticks_on_borders = true

[node name="HSeparator4" type="HSeparator" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="AnimationSpeedLabel" type="Label" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
text = "Animation Speed: 0.5"

[node name="AnimationSpeedSlider" type="HSlider" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 0.5
tick_count = 5
ticks_on_borders = true

[node name="HSeparator5" type="HSeparator" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="UI/Control/ControlPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Generation Time: 0.0 ms
Vertices: 0"
vertical_alignment = 1

[node name="InstructionsPanel" type="Panel" parent="UI/Control"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -160.0
offset_right = 280.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="InstructionsLabel" type="Label" parent="UI/Control/InstructionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 13
text = "ðŸŽ® CONTROLS

WASD - Move around
Mouse - Look around  
Space - Jump
Shift - Run faster
Escape - Toggle cursor

ðŸ”§ FEATURES

â€¢ Real-time metaball generation
â€¢ Walkable collision surfaces
â€¢ Dynamic animation system
â€¢ Adjustable parameters

Walk inside the structures and explore!"
vertical_alignment = 1

[node name="PerformanceLabel" type="Label" parent="UI/Control"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 300.0
offset_right = -20.0
offset_bottom = 350.0
theme_override_colors/font_color = Color(1, 1, 0.7, 0.8)
theme_override_font_sizes/font_size = 12
text = "FPS: 60
Frame Time: 16.7ms"
horizontal_alignment = 2

[node name="CrosshairPanel" type="Panel" parent="UI/Control"]
modulate = Color(1, 1, 1, 0.7)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0

[node name="CrosshairH" type="Panel" parent="UI/Control"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0

[node name="CrosshairV" type="Panel" parent="UI/Control"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[connection signal="pressed" from="UI/Control/ControlPanel/VBoxContainer/RegenerateButton" to="." method="_on_regenerate_button_pressed"]
[connection signal="value_changed" from="UI/Control/ControlPanel/VBoxContainer/MetaballCountSlider" to="." method="_on_metaball_count_slider_value_changed"]
[connection signal="value_changed" from="UI/Control/ControlPanel/VBoxContainer/IsoLevelSlider" to="." method="_on_iso_level_slider_value_changed"]
[connection signal="value_changed" from="UI/Control/ControlPanel/VBoxContainer/AnimationSpeedSlider" to="." method="_on_animation_speed_slider_value_changed"]
